--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "app1",
+  "name": "denvatodemo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.13.0",
+    "radium": "^0.26.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
