--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "radium": "^0.26.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
