--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@types/react": "^16.9.11",
+    "bootstrap": "^4.3.1",
+    "firebase": "^7.3.0",
     "node-sass": "^4.13.0",
     "radium": "^0.26.0",
     "react": "^16.11.0",
