--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "@types/react": "^16.9.11",
     "bootstrap": "^4.3.1",
     "firebase": "^7.3.0",
+    "jquery": "^3.4.1",
     "node-sass": "^4.13.0",
+    "popper.js": "^1.16.0",
     "radium": "^0.26.0",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "reactstrap": "^8.1.1",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
