--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "webpack": "4.41.0",
+    "webpack-dev-server": "3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
