--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
+    "styled-components": "^5.1.1",
     "webpack": "4.41.0",
     "webpack-dev-server": "3.2.1"
   },
