--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.3",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^6.0.1",
     "reactstrap": "^8.1.1",
@@ -24,8 +24,7 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
     "styled-components": "^5.1.1",
-    "webpack": "4.41.0",
-    "webpack-dev-server": "3.2.1"
+    "webpack-dev-server": "3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
